src/objects/Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Baseline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baseline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Service_Started__c</fullName>
        <label>Date Service Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finalized By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_PlanID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of Plan before migration</description>
        <label>Original_PlanID</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Action Plan</label>
        <referenceTo>Action_Plan__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Previous_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purge_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>trigger deletes this record when checked</description>
        <label>Purge Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Action Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Previous_Action_Plan__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Service_Assignment__c</columns>
        <columns>Purge_Record__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Active_Final_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Effective_Date__c ) &amp;&amp; Text(Status__c) = &apos;Active Final&apos;</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>An Effective Date is Required before finalizing an action plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Active_Final_Target_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Target_Date__c ) &amp;&amp; Text(Status__c) = &apos;Active Final&apos;</errorConditionFormula>
        <errorDisplayField>Target_Date__c</errorDisplayField>
        <errorMessage>A Target Date is Required before finalizing an action plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TargetDate_before_EfftiveDate</fullName>
        <active>true</active>
        <errorConditionFormula>Target_Date__c &lt;= Effective_Date__c</errorConditionFormula>
        <errorDisplayField>Target_Date__c</errorDisplayField>
        <errorMessage>Target Date Must be after Effective Date</errorMessage>
    </validationRules>
</CustomObject>